--- a/src/index.html
+++ b/src/index.html
@@ -5,15 +5,16 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>TVMaze shows</title>
+    <title>BeerFlix</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css"
         integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 </head>
 
 <body>  
+        <%= require('html-loader!./templates/navbar.html') %>  
     <main>
-        <%= require('html-loader!./templates/navbar.html') %>            
+        <%= require('html-loader!./templates/beers-section.html') %>         
     </main>
 </body>
 
