--- a/src/detail.html
+++ b/src/detail.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=Black+Ops+One&effect=crackle" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css"
         integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+    <link rel="shortcut icon" type="image/png" href="/images/favicon.png"/>
 </head>
 
 <body>  
